<resources>
    <string name="app_name">RoomDemo</string>
    <string name="product_id">Product ID</string>
    <string name="not_assigned">Not assigned</string>
    <string name="product_name">Product Name</string>
    <string name="product_quantity">Product Quantity</string>
    <string name="add_string">Add</string>
    <string name="find_string">Find</string>
    <string name="delete_string">Delete</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_phone">Enter Phone</string>
    <string name="desc">Desc</string>
    <string name="acs">Acs</string>
    <string name="find">Find</string>
    <string name="add">Add</string>
    <string name="delete">delete</string>
</resources>